Completing the assignment
Completing the assignment and removing css files.

--- a/pages/browse/browse.html
+++ b/pages/browse/browse.html
@@ -1,1 +1,102 @@
-<h1>HOWDYDOO</h1>
+<section class="backgroundcolorgallery">
+  <section class="browsecontainer">
+    <div class="containerthree">
+      <div class="leftone">
+        <section class="shoespics"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Black Boots</div>
+        <div class="paragraphinfo">Looking for something stylish?</div>
+      </div>
+    </div>
+    <div class="containerfour">
+      <div class="leftone">
+        <section class="shoespicsone"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Beige Heels</div>
+        <div class="paragraphinfo">Looking for something unique?</div>
+      </div>
+    </div>
+  </section>
+  <section class="browsecontainergrouptwo">
+    <div class="containerthree">
+      <div class="leftone">
+        <section class="shoespics"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Brown Boots</div>
+        <div class="paragraphinfo">Looking for something special?</div>
+      </div>
+    </div>
+    <div class="containerfour">
+      <div class="leftone">
+        <section class="shoespicstwo"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Slip-Ons</div>
+        <div class="paragraphinfo">Looking for something comfy?</div>
+      </div>
+    </div>
+  </section>
+  <section class="browsecontainergroupthree">
+    <div class="containerthree">
+      <div class="leftone">
+        <section class="shoespics"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Pink Heels</div>
+        <div class="paragraphinfo">Looking for something sparkly?</div>
+      </div>
+    </div>
+    <div class="containerfour">
+      <div class="leftone">
+        <section class="shoespicsthree"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Speckled Shoes</div>
+        <div class="paragraphinfo">Looking for something sporty?</div>
+      </div>
+    </div>
+  </section>
+  <section class="browsecontainergroupfour">
+    <div class="containerthree">
+      <div class="leftone">
+        <section class="shoespics"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Brown Sandals</div>
+        <div class="paragraphinfo">Looking for something soft?</div>
+      </div>
+    </div>
+    <div class="containerfour">
+      <div class="leftone">
+        <section class="shoespicsfour"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Black Shoes</div>
+        <div class="paragraphinfo">Looking for something fancy?</div>
+      </div>
+    </div>
+  </section>
+  <section class="browsecontainergroupfive">
+    <div class="containerthree">
+      <div class="leftone">
+        <section class="shoespics"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Tennis Shoes</div>
+        <div class="paragraphinfo">Looking for something active?</div>
+      </div>
+    </div>
+    <div class="containerfour">
+      <div class="leftone">
+        <section class="shoespicsfive"></section>
+      </div>
+      <div class="rightone">
+        <div class="titleofpara">Sports Shoes</div>
+        <div class="paragraphinfo">Looking for something lively?</div>
+      </div>
+    </div>
+  </section>
+</section>
