--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -54,6 +54,7 @@
 <div class="donateyourshoes">
   <section class="callout2">
     <div class="donateyourshoestitle">Have Old Shoes? We Recycle!</div>
+    <div class="donateshoesinfo">We glady accept old shoes, so we can reuse those tired old soles to create new and beautiful designs!</div>
     <input class="explorebutton" type="submit" value="Donate Shoes!" />
   </section>
 </div>
