--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Perfect Fit</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="navHolder">
+      <div class="logo mobile">The Perfect Fit</div>
       <div class="bars">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
       <div class="links">
+        <div class="logo desk">The Perfect Fit</div>
         <a class="linkname" href="#home">HOME</a>
         <a class="linkname" href="#about">ABOUT</a>
         <a class="linkname" href="#browse">BROWSE</a>
@@ -23,6 +32,32 @@
 
     <div id="app"></div>
 
+    <footer class="footerbox">
+      <section class="logo-below">The Perfect Fit</section>
+      <section class="copyright">
+        Copyright 2023 The Perfect Fit. All rights reserved
+      </section>
+      <section class="group-social-media">
+        <section class="social-media-icons1">
+          <i
+            class="fa-brands fa-square-facebook fa-xl"
+            style="color: bisque"
+          ></i>
+        </section>
+        <section class="social-media-icons2">
+          <i
+            class="fa-brands fa-square-instagram fa-xl"
+            style="color: bisque"
+          ></i>
+        </section>
+        <section class="social-media-icons3">
+          <i
+            class="fa-brands fa-square-twitter fa-xl"
+            style="color: bisque"
+          ></i>
+        </section>
+      </section>
+    </footer>
     <script src="lib/jquery-3.7.1.min"></script>
     <script type="module" src="model/model.js"></script>
     <script type="module" src="app/app.js"></script>
